--- a/.github/workflows/ionos-space.yml
+++ b/.github/workflows/ionos-space.yml
@@ -18,31 +18,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - name: Setup Node.js 12.16.x
-        if: ${{ steps.project.outputs.deployment-enabled == 'true' }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.16.x
       - name: Prepare Project build environment
         if: ${{ steps.project.outputs.deployment-enabled == 'true' }}
-        run: npm ci
-      - name: Build Node project
-        if: ${{ steps.project.outputs.deployment-enabled == 'true' }}
-        run: npm run build
-        env:
-          CI: true
-          SITE_URL: ${{ steps.project.outputs.site-url }}
-          URL_WEB: https://ionos.space
-          URL_GITHUB: https://github.com/ionos-deploy-now/documentation
-          SHOW_BLOG: true
-      - name: Deploy to IONOS
-        if: ${{ steps.project.outputs.deployment-enabled == 'true' }}
-        uses: ionos-deploy-now/deploy-to-ionos-action@v1
-        with:
-          remote-host: ${{ steps.project.outputs.remote-host }}
-          api-key: ${{ secrets.IONOS_API_KEY }}
-          service-host: api-eu.ionos.space
-          branch-id: ${{ steps.project.outputs.branch-id }}
-          storage-quota: ${{ steps.project.outputs.storage-quota }}
-          project: 418bd374-d907-49b0-b6b6-eae84e6c3807
-          dist-folder: dist
+        run: ls -al
