--- a/.github/workflows/ionos-space.yml
+++ b/.github/workflows/ionos-space.yml
@@ -10,6 +10,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'recursive'
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_DEBUG: False
+          file_name: .SpicyPizza.env          
       - name: Creating .env file
         uses: fmunirdev/envvar-to-dotenv-action@v0.1.0
         env:
