--- a/.github/workflows/ionos-space.yml
+++ b/.github/workflows/ionos-space.yml
@@ -18,6 +18,6 @@ jobs:
           ENV_VAR3: 'value 3'
         with:
           variableName: ENV_VAR1,ENV_VAR2,ENV_VAR3
-          target: .test.env
+          target: test/.env
       - name: Prepare Project build environment
         run: ls -al
