--- a/.github/workflows/ionos-space.yml
+++ b/.github/workflows/ionos-space.yml
@@ -17,7 +17,7 @@ jobs:
           ENV_VAR2: 'value 2'
           ENV_VAR3: 'value 3'
         with:
-          variableName: ENV_VAR1,ENV_VAR2,ENV_VAR3
+          variableNames: ENV_VAR1,ENV_VAR2,ENV_VAR3
           target: test/.env
       - name: List Files
         run: |
